--- a/task10/package.json
+++ b/task10/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task7",
+  "name": "04-04-25",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.1",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9"
   }
 }
